test/invalid-files/proc_return.in.pcse
PROCEDURE x
	RETURN 3
ENDPROCEDURE
OUTPUT x()
